Feat: Continued coding for final project clean code

--- a/predict-customer-churn-clean-code/Guide.ipynb
+++ b/predict-customer-churn-clean-code/Guide.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "2. ***churn_script_logging_and_tests.py***<br> \n",
     "This file should:  \n",
-    " - Contain unit tests for the *churn_library.py* functions. You have to write test for *each* input function. Use the basic assert statements that test functions work properly. The goal of test functions is to checking the returned items aren't empty or folders where results should land have results after the function has been run.\n",
+    " - Contain unit tests for the *churn_library.py* functions. You have to write test for *each* input function. Use the basic assert statements that test functions work properly. The goal of test functions is to checking the returned items aren"t empty or folders where results should land have results after the function has been run.\n",
     " \n",
     " - Log any errors and INFO messages. You should log the info messages and errors in a .log file, so it can be viewed post the run of the script. The log messages should easily be understood and traceable.\n",
     "\n",
@@ -101,7 +101,7 @@
     "pylint churn_script_logging_and_tests.py\n",
     "```\n",
     "\n",
-    " You should make sure you don't have any errors, and that your code is scoring as high as you can get it!  Shoot for a `pylint` score exceeding 7 for both Python files. \n",
+    " You should make sure you don"t have any errors, and that your code is scoring as high as you can get it!  Shoot for a `pylint` score exceeding 7 for both Python files. \n",
     "\n",
     "\n",
     "- **Docstring** - All functions and files should have document strings that correctly identifies the inputs, outputs, and purpose of the function. All files have a document string that identifies the purpose of the file, the author, and the date the file was created.\n",
@@ -135,7 +135,7 @@
     "**Solution**\n",
     "```\n",
     "import os\n",
-    "os.environ['QT_QPA_PLATFORM']='offscreen'\n",
+    "os.environ["QT_QPA_PLATFORM"]="offscreen"\n",
     "```\n",
     "\n",
     "Install the linter and auto-formatter:\n",
